# CS100

./: CMakeLists.txt  README.md  movie  output.txt
header/: BothSpecs.hpp  ContainsSpecs.hpp  EitherSpec.hpp  GetRecommendation.hpp  MovieList.hpp  select.hpp
src/: GetRecommendation.cpp  MovieList.cpp  main.cpp
tests/: test.cpp
